--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
 html {
     scroll-behavior: smooth;
   }
+.App {
+background-color: #f0f2f5;
+}
 @font-face {
     font-family: 'Segoe-ui-historic'; /* Use single quotes for font names with spaces */
     src: url('../public/fonts/Segoe-ui-historic.ttf') format('truetype'); /* Specify the format */
@@ -192,8 +195,12 @@ html {
     cursor: pointer;
 }
 .homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv {
-    height: 100vh;
+    height: 95vh;
     text-align: center;
+    width: 70%;
+    margin: 3vh auto;
+    display: flex;
+    flex-direction: row;
 }
 .bottomNavBar {
     height: 10vh;
@@ -212,10 +219,11 @@ html {
     display: flex;
     list-style-type: none;
     width: 75%;
+    border-top: 1px solid #00000042;
 }
 .bottomLists {
-    padding: 15px 25px;
-    margin: 0px 15px 5px 15px;
+    padding: 18px 25px;
+    margin: 0px 15px;
     font-size: 16px;
     cursor: pointer;
     font-family: sans-serif;
@@ -224,4 +232,47 @@ html {
     border-bottom: 5px solid #0866ff;
     color: #0866ff;
     font-weight: 700;
+}
+.infoDiv {
+    height: 100%;
+    width: 28vw;
+    box-shadow: 0px 0px 5px 0px #808080a1;
+    border-radius: 10px;
+    margin-right: 3vh;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+}
+.socialDiv {
+    height: 100%;
+    width: 42vw;
+    box-shadow: 0px 0px 5px 0px #808080a1;
+    border-radius: 10px;
+    background-color: #fff;
+}
+.introduction img {
+    height: 25px;
+    margin: 0 8px 0 0;
+}
+.introText {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 15px;
+}
+.introduction {
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    margin: 15px 0;
+}
+.introduction span {
+    font-size: 15px;
+}
+.infoDiv a {
+    font-weight: 600;
+    text-decoration: none;
+    color: #000;
 }
