--- a/src/App.css
+++ b/src/App.css
@@ -194,11 +194,11 @@ background-color: #f0f2f5;
     color: #fff;
     cursor: pointer;
 }
-.homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv {
-    height: 95vh;
+.homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv, .workMainDiv {
+    height: 88vh;
     text-align: center;
     width: 70%;
-    margin: 3vh auto;
+    margin: 5vh auto;
     display: flex;
     flex-direction: row;
 }
@@ -235,7 +235,7 @@ background-color: #f0f2f5;
 }
 .infoDiv {
     height: 100%;
-    width: 28vw;
+    width: 45vw;
     box-shadow: 0px 0px 5px 0px #808080a1;
     border-radius: 10px;
     margin-right: 3vh;
@@ -247,10 +247,21 @@ background-color: #f0f2f5;
 }
 .socialDiv {
     height: 100%;
-    width: 42vw;
+    width: 32vw;
     box-shadow: 0px 0px 5px 0px #808080a1;
     border-radius: 10px;
     background-color: #fff;
+    margin-right: 3vh;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+}
+.socialDiv a {
+    font-weight: 600;
+    text-decoration: none;
+    color: #000;
 }
 .introduction img {
     height: 25px;
@@ -275,4 +286,48 @@ background-color: #f0f2f5;
     font-weight: 600;
     text-decoration: none;
     color: #000;
+}
+.textDiv {
+    display: flex;
+    flex-direction: column;
+}
+.textDiv span:nth-child(2) {
+    font-size: 12px;
+    font-weight: 500;
+    color: #65676bab;
+}
+/* .socialDiv span {
+    display: block;
+    text-align: left;
+    line-height: 30px;
+    letter-spacing: 1px;
+    padding: 15px 20px;
+} */
+.workMainDiv .infoDiv .introText {
+    margin-top: 0px;
+}
+.workMainDiv .infoDiv .introduction:first-child {
+    margin-left: 20px;
+}
+.workMainDiv .infoDiv .introduction:nth-child(2)  {
+    margin: 0px 20px
+}
+.workMainDiv .socialDiv .textDiv span:nth-child(2){
+    font-size: 13px;
+    font-weight: 500;
+    color: #000;
+}
+.workMainDiv .socialDiv .textDiv span:nth-child(3){
+    font-size: 12px;
+    font-weight: 500;
+    color: #65676bab;
+}
+.projectsMainDiv .socialDiv h3 {
+    text-align: left;
+}
+.projectsMainDiv .socialDiv {
+    overflow-y: auto;
+}
+.projectsMainDiv .introduction .textDiv {
+    cursor: pointer;
 }
