--- a/src/App.css
+++ b/src/App.css
@@ -273,6 +273,7 @@ background-color: #f0f2f5;
     align-items: flex-start;
     padding: 10px;
     overflow: auto;
+    position: relative;
 }
 .socialDiv {
     height: 100%;
@@ -566,6 +567,7 @@ align-items: center;
     align-self: center;
     position: absolute;
     right: 10px;
+    top: 7px;
     background: #0866ff;
     padding: 10px 20px;
     border-radius: 3px;
@@ -582,6 +584,82 @@ align-items: center;
 .blogSearchBar:focus-visible {
     outline: none;
     border-bottom: 1px solid #6b6d71;
+}
+.fullScreen {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
+}
+.fullScreen img {
+    width: 25px;
+}
+.projectLoadingDiv {
+    position: absolute;
+    height: calc(100% - 19px);
+    width: calc(100% - 19px);
+    background-color: #ffffff00;
+    backdrop-filter: blur(2px);
+    display: none;
+}
+.projectLoadingDiv .loaderBox {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: 30px;
+    width: 30px;
+}
+.loaderBox.one {
+    transform: translate(-110%, -110%);
+    background: #0866ff;
+    animation: oneAnim 0.4s ease-in-out 0s infinite alternate forwards;
+}
+.loaderBox.two {
+    transform: translate(10%, -110%);
+    background: #8c939d;
+    animation: twoAnim 0.4s ease-in-out 0.1s infinite alternate forwards;
+}
+.loaderBox.three {
+    transform: translate(-110%, 10%);
+    background: #8c939d;
+    animation: twoAnim 0.4s ease-in-out 0.2s infinite alternate forwards;
+}
+.loaderBox.four {
+    transform: translate(10%, 10%);
+    background: #0866ff;
+    animation: oneAnim 0.4s ease-in-out 0.3s infinite alternate forwards;
+}
+@keyframes oneAnim {
+    from {
+        background: #0866ff;
+    }
+    to {
+        background: #8c939d;
+    }
+}
+@keyframes twoAnim {
+    from {
+        background: #8c939d;
+    }
+    to {
+        background: #0866ff;
+    }
+}
+@keyframes twoAnim {
+    from {
+        background: #8c939d;
+    }
+    to {
+        background: #0866ff;
+    }
+}
+@keyframes oneAnim {
+    from {
+        background: #0866ff;
+    }
+    to {
+        background: #8c939d;
+    }
 }
 @media only screen and (max-width: 650px) and (max-height: 900px) and (orientation: portrait){
     .navBar {
