--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,12 @@ background-color: #f0f2f5;
 }
 .searchBar {
     height: 8vh;
-    width: 275px;
+    width: 45vh;
     border-radius: 20px;
     border: none;
     background-color: #f0f2f5;
-    padding-left: 40px;
+    padding-left: 7vh;
+    font-size: 2.4vh;
 }
 /* Style for the search icon */
 .leftSide .search-container img {
@@ -57,7 +58,7 @@ background-color: #f0f2f5;
     transform: translateY(-50%);
     background-color: #f0f2f5;
     border-radius: 50%;
-    height: 39px;
+    height: 5vh;
 }
 
 .searchBar:focus-visible {
@@ -111,7 +112,7 @@ background-color: #f0f2f5;
 .rightSide img {
     border-radius: 50%;
     background-color: #e4e6eb;
-    margin: 0 10px;
+    margin: 0 1.5vh;
     cursor: pointer;
 }
 .rightSide img:nth-child(3) {
@@ -149,15 +150,15 @@ background-color: #f0f2f5;
     justify-content: space-between;
 }
 .profileImg {
-    height: 175px;
-    width: 175px;
+    height: 30vh;
+    width: 30vh;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-    left: 35px;
-    top: -75px;
+    left: 7vh;
+    top: -12vh;
     background-color: #fff;
 }
 .profileImg img {
@@ -168,38 +169,37 @@ background-color: #f0f2f5;
 }
 .profileInfo {
     position: relative;
-    left: -90px;
+    left: -15vh;
     height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 2.6vh;
 }
 .profileName {
-    font-size: 30px;
+    font-size: 5vh;
     font-weight: bold;
     font-family: sans-serif;
     line-height: 1.4em;
 }
 .profileSubText {
     color: #65676b;
-    font-size: 15px;
+    font-size: 2.6vh;
     font-weight: 700;
     font-family: sans-serif;
 }
 .coverBtn {
-    right: 45px;
+    right: 10vh;
     display: flex;
     align-items: center;
     position: relative;
-    top: -35px;
+    top: -3vh;
 }
 .coverBtn button {
-    font-size: 15px;
-    margin: 10px;
+    font-size: 2.8vh;
     border: none;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 1.7vh;
+    border-radius: 0.5vh;
     background-color: #0866ff;
     color: #fff;
     cursor: pointer;
@@ -244,9 +244,9 @@ background-color: #f0f2f5;
     top: 1vh;
 }
 .bottomLists {
-    padding: 18px 25px;
-    margin: 0px 15px;
-    font-size: 16px;
+    padding: 2vh 2.6vh;
+    margin: 0px 2vh;
+    font-size: 2.6vh;
     cursor: pointer;
     font-family: sans-serif;
 }
@@ -254,7 +254,7 @@ background-color: #f0f2f5;
     padding: revert;
 }
 .bottomLists.active {
-    border-bottom: 5px solid #0866ff;
+    border-bottom: 0.7vh solid #0866ff;
     color: #0866ff;
     font-weight: 700;
 }
@@ -266,7 +266,7 @@ background-color: #f0f2f5;
     width: 45vw;
     box-shadow: 0px 0px 5px 0px #808080a1;
     border-radius: 10px;
-    margin-right: 3vh;
+    margin-right: 2.6vh;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -281,7 +281,7 @@ background-color: #f0f2f5;
     box-shadow: 0px 0px 5px 0px #808080a1;
     border-radius: 10px;
     background-color: #fff;
-    margin-right: 3vh;
+    margin-right: 2.6vh;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -294,7 +294,7 @@ background-color: #f0f2f5;
     color: #000;
 }
 .introduction img {
-    height: 25px;
+    height: 4vh;
     margin: 0 8px 0 0;
 }
 .introText {
@@ -303,6 +303,7 @@ background-color: #f0f2f5;
     align-items: flex-start;
     margin-top: 15px;
     overflow-y: auto;
+    width: 100%;
 }
 .introduction {
     text-align: left;
@@ -311,19 +312,22 @@ background-color: #f0f2f5;
     margin: 15px 0;
 }
 .introduction span {
-    font-size: 15px;
+    font-size: 2.6vh;
 }
 .infoDiv a {
     font-weight: 600;
     text-decoration: none;
     color: #000;
 }
+.infoDiv h3, .socialDiv h3 {
+    font-size: 3.2vh;
+}
 .textDiv {
     display: flex;
     flex-direction: column;
 }
 .textDiv span:nth-child(3) {
-    font-size: 12px;
+    font-size: 2vh;
     font-weight: 500;
     color: #65676bab;
 }
@@ -344,12 +348,12 @@ background-color: #f0f2f5;
     margin: 0px 20px
 }
 .workMainDiv .socialDiv .textDiv span:nth-child(2){
-    font-size: 13px;
+    font-size: 2vh;
     font-weight: 500;
     color: #000;
 }
 .workMainDiv .socialDiv .textDiv span:nth-child(3){
-    font-size: 12px;
+    font-size: 2vh;
     font-weight: 500;
     color: #65676bab;
 }
@@ -407,6 +411,7 @@ background-color: #f0f2f5;
 label {
     font-weight: 600;
     margin-bottom: 5px;
+    font-size: 2.6vh;
 }
 .form input{
     border: none;
@@ -414,6 +419,7 @@ label {
     padding: 5px;
     color: #8c939d;
     width: 100%;
+    font-size: 2.5vh;
 }
 .form input.submitBtn {
     border: none;
@@ -450,18 +456,20 @@ align-items: center;
 }
 #contact .bottomTxt span:nth-child(1) {
     font-weight: 300;
+    font-size: 2.4vh;
 }
 #contact .bottomTxt span:nth-child(2) {
     font-weight: 700;
+    font-size: 2.6vh;
 }
 #contact .introText h2 {
-    font-size: 5em;
+    font-size: 15vh;
     color: #8c939d;
 }
 #contact .introText h3 {
     text-shadow: 1px 1px 2px #000;
     color: #fff;
-    font-size: 1.4em;
+    font-size: 3.5vh;
 }
 #contact .introText {
     display: flex;
@@ -629,6 +637,64 @@ align-items: center;
     background: #0866ff;
     animation: oneAnim 0.4s ease-in-out 0.3s infinite alternate forwards;
 }
+.rightSide img:nth-child(2) {
+    padding: 1.5vh;
+}
+.dark {
+    transition: all 0.5s linear;
+}
+.App.dark {
+    background-color: #000;
+}
+.coverPage.dark {
+    background-image: none;
+    background-color: #000;
+    color: #fff;
+}
+.navBar.dark {
+    background-color: #000;
+    color: #fff;
+    border-bottom: 2px solid #fff;
+}
+.infoDiv.dark, .socialDiv.dark {
+    background-color: #000;
+    color: #fff;
+    border: 2px solid #fff;
+}
+.socialDiv.dark a {
+    color: #fff;
+}
+.workMainDiv .socialDiv.dark .textDiv span:nth-child(2) {
+    color: #fff
+}
+.workMainDiv .socialDiv.dark .textDiv span:nth-child(3) {
+    color: #c3c3c3ab;
+}
+.socialDiv.dark .textDiv span:nth-child(3) {
+    color: #c3c3c3ab;
+}
+.bottomNavBar.dark {
+    background-color: #000;
+    border-bottom: 2px solid #fff;
+}
+.bottomNavBar.dark .bottomNavList a {
+    color: #fff;
+}
+.infoDiv.dark .form input {
+    background-color: transparent;
+}
+.searchBar.dark {
+    border-radius: 0;
+    background: transparent;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+.suggestionList.dark {
+    background-color: #000;
+}
+.closeMenu {
+    display: none;
+}
 @keyframes oneAnim {
     from {
         background: #0866ff;
@@ -662,9 +728,9 @@ align-items: center;
     }
 }
 @media only screen and (max-width: 650px) and (max-height: 900px) and (orientation: portrait){
-    .navBar {
+    /* .navBar {
         display: none;
-    }
+    } */
     .mobOnlyText {
         display: block;
     }
@@ -672,8 +738,8 @@ align-items: center;
         display: none;
     }
     .coverImg {
-            width: 100vw;
-            height: 40vw;
+        width: 100vw;
+        height: 50vw;
     }
     .coverBottom {
         display: flex;
@@ -682,33 +748,36 @@ align-items: center;
     width: 85%;
     }
     .profileImg {
-        height: 130px;
-        width: 130px;
-        left: 0px;
-        top: -58px;
+        /* height: 130px;
+        width: 130px; */
+        /* left: 0px;
+        top: -58px; */
+        left: 0vh;
     }
     .profileInfo {
-        left: 0px;
-        top: -75px;
+        left: 0vh;
+        top: -9vh;
     }
     .coverBtn {
-        top: -66px;
-        left: 0px;
+        top: -6vh;
+        left: 0vh;
     }
     .coverBtn button {
         margin-left: 0;
     }
-    .bottomNavBar {
-        height: 2.5em;
-    }
-    .bottomNavList {
+    /* .bottomNavBar {
+        height: 8vh;
+    } */
+    /* .bottomNavList {
         width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    }
+    } */
     .bottomLists {
-        padding: 5px;
+    padding: 2vh 0;
+    margin: 0px 1.5vh;
+    font-size: 2.2vh;
     }
     .homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv, .workMainDiv
     {
@@ -716,7 +785,7 @@ align-items: center;
         width: 100%;
         display: flex;
         flex-direction: column;
-        height: -webkit-fill-available;
+        height: auto;
     }
     .infoDiv {
         width: 100vw;
@@ -777,6 +846,86 @@ align-items: center;
     .postImg {
         width: 100%;
     }
+    /* new css to mobile portrait for navigation styles and some changes */
+
+    .bottomNavBar {
+        height: 100vh;
+        width: 100vw;
+        position: fixed;
+        top: 0;
+    }
+    .bottomNavList {
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    }
+    .bottomLists {
+        padding: 2vh 0;
+        margin: 5vh 0;
+        font-size: 3.5vh;
+    }
+    .bottomLists.active {
+        border: none;
+    }
+    .closeMenu {
+        height: 7vh;
+        width: 7vh;
+        position: absolute;
+        right: 2vh;
+        top: 2vh;
+        display: block;
+        background: transparent;
+        border: none;
+    }
+    .closeMenu img {
+        height: 100%;
+    }
+    .navBar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        z-index: 9;
+        width: 100vw;
+        background-color: #8c939d6e;
+        backdrop-filter: blur(2px);
+        height: fit-content;
+        padding: 1vh 0;
+        z-index: 1;
+    }
+    .search-container {
+        display: none;
+    }
+    .rightSide {
+        display: flex;
+        justify-content: space-around;
+        width: 75vw;
+    }
+    .navBar img {
+        height: 4.2vh;
+    }
+    .rightSide img:nth-child(3) {
+        height: 4.2vh;
+        width: 4.2vh;
+        object-fit: cover;
+        border-radius: 0;
+        background-color: transparent;
+    }
+    .leftSide {
+        display: flex;
+        justify-content: center;
+        width: 25vw;
+    }
+    .bottomNavBar {
+        display: none;
+    }
+    .rightSide img:nth-child(2) {
+        padding: 1vh;
+    }
 }
 @media only screen and (min-width: 500px) and (max-width: 900px) and (orientation: landscape){
     .navBar {
@@ -800,11 +949,11 @@ align-items: center;
         word-break: break-all;
     }
     #contact .introText h2 {
-        font-size: 2em;
+        /* font-size: 2em; */
     }
     .profileImg {
-            height: 125px;
-            width: 125px;
+            /* height: 125px;
+            width: 125px; */
     }
     .profileName {
         font-size: 25px;
@@ -813,67 +962,65 @@ align-items: center;
         top: 0;
     }
     .bottomNavBar {
-        height: 4em;
+        /* height: 4em; */
     }
 }
-@media only screen and (min-width: 901px) and (max-width: 1235px) and (orientation: landscape){
-    .profileImg {
-        height: 135px;
-        width: 135px;
-        left: 30px;
-        top: -65px;
-    }
+@media only screen and (min-width: 901px) and (max-width: 1366px) and (orientation: landscape){
     .profileInfo {
-        left: -7px;
+        left: -5vh;
     }
-    .profileName {
-        font-size: 25px;
+    .coverImg, .coverBottom {
+        width: 85%;
     }
-    .profileSubText {
-        font-size: 13px;
+    .homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv, .workMainDiv {
+        width: 90%;
     }
-    .coverBtn {
-       
-        top: -10px;
+    .infoDiv {
+        width: 54vw;
     }
+    .socialDiv {
+        width: 35vw;
+        margin-right: 0;
+    }
+    
 }
 @media only screen and (min-width: 1919px) and (min-height: 950px) and (orientation: landscape){
     .profileImg {
-        align-items: center;
+        /* align-items: center;
         background-color: #fff;
         border-radius: 50%;
         display: flex;
         height: 275px;
-        justify-content: center;
-        left: 63px;
-        position: relative;
-        top: -123px;
-        width: 275px;
+        justify-content: center; */
+        /* left: 63px; */
+        /* position: relative; */
+        /* top: -123px; */
+        /* width: 275px; */
     }
     .searchBar {
-        font-size: 20px;
+        /* font-size: 20px; */
     }
     .profileName {
-        font-size: 55px;
+        /* font-size: 55px; */
         line-height: 1.4em;
     }
     .profileSubText {
         color: #65676b;
-        font-size: 20px;
+        /* font-size: 20px; */
     }
     .coverBtn button {
-        font-size: 20px;
+        /* font-size: 20px; */
     }
     .bottomLists {
-        font-size: 25px;
+        /* font-size: 25px; */
     }
     .infoDiv h3 {
-        font-size: 28px;
+        /* font-size: 28px; */
     }
-    .introduction span {
+    /* .introduction span {
         font-size: 24px;
-    }
-    .workMainDiv .socialDiv .textDiv span:nth-child(2) {
+    } */
+    /* .workMainDiv .socialDiv .textDiv span:nth-child(2) {
         font-size: 20px;
     }
     .textDiv span:nth-child(3) {
@@ -890,5 +1037,70 @@ align-items: center;
     }
     #contact .bottomTxt span:nth-child(2) {
         font-size: 20px;
+    } */
+}
+@media only screen and (min-width: 651px) and (max-width: 1024px)  and (min-height: 1000px) and (orientation: portrait){
+    .search-container{
+        display: none;
+    }
+    .coverPage {
+        height: 78vh;
+    }
+    .coverImg {
+        height: 55vh;
+        width: 100%;
+    }
+    .coverBottom {
+        height: 25vh;
+        width: 100%;
+    }
+    .profileImg {
+        left: 1vh;
+        top: -9vh;
+    }
+    .coverBtn {
+        right: 1vh;
+        height: fit-content;
+        top: 4vh;
+    }
+    .profileInfo {
+        left: -1vh;
+    }
+    .coverBtn button {
+        width: max-content;
+    }
+    .profileName {
+        font-size: 4vh;
+    }
+    .profileImg {
+        height: 25vh;
+        width: 25vh;
+    }
+    .bottomNavList {
+        width: 100%;
+        justify-content: center;
+    }
+    .bottomNavBar {
+        height: 9vh;
+    }
+    .homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv, .workMainDiv {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        padding-top: 3vh;
+    }
+    .infoDiv, .socialDiv {
+        width: 100vw;
+        margin: 1vh 0;
+    }
+    .mobOnlyText {
+        display: block;
+    }
+    .desktopOnlyText {
+        display: none;
+    }
+    #project .infoDiv {
+        display: none;
     }
 }
