worked on resume button

--- a/src/App.css
+++ b/src/App.css
@@ -201,10 +201,18 @@ user-select: none;
     border: none;
     padding: 1.7vh;
     border-radius: 0.5vh;
-    background-color: #0866ff;
-    color: #fff;
+    background-color: #e4e6eb;
     cursor: pointer;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    color: #0866ff;
+    margin: 0 5px;
 }
+.coverBtn button img {
+    height: 100%;
+}
+
 .homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv, .workMainDiv {
     height: 100vh;
     text-align: center;
@@ -641,6 +649,9 @@ align-items: center;
 .rightSide img:nth-child(2) {
     padding: 1.5vh;
 }
+.cv-container iframe {
+    height: 100vh;
+}
 .dark {
     transition: all 0.5s linear;
 }
@@ -655,12 +666,12 @@ align-items: center;
 .navBar.dark {
     background-color: #000;
     color: #fff;
-    border-bottom: 2px solid #fff;
+    /* border-bottom: 2px solid #fff; */
 }
 .infoDiv.dark, .socialDiv.dark {
     background-color: #000;
     color: #fff;
-    border: 2px solid #fff;
+    /* border: 2px solid #fff; */
 }
 .socialDiv.dark a {
     color: #fff;
@@ -692,6 +703,16 @@ align-items: center;
 }
 .suggestionList.dark {
     background-color: #000;
+}
+.call.dark, .cv-show.dark {
+    background-color: #000;
+    height: 50px;
+}
+.cv-show.dark span {
+    display: none;
+}
+.call.dark span {
+    display: none;
 }
 .closeMenu {
     display: none;
@@ -728,7 +749,23 @@ align-items: center;
         background: #8c939d;
     }
 }
-@media only screen and (max-width: 650px) and (max-height: 900px) and (orientation: portrait){
+.profile-icon {
+    height: 8vh;
+    width: 8vh;
+    object-fit: cover;
+    opacity: 0;
+    border-radius: 50%;
+    background-color: #e4e6eb;
+    margin: 1vh 1.5vh;
+    position: absolute;
+    right: 4px;
+    cursor: pointer;
+    transition: all 0.1s ease-out;
+}
+.bottomNavBar.onTop .profile-icon {
+    opacity: 1;
+}
+@media only screen and (max-width: 650px) and (max-height: 950px) and (orientation: portrait){
     /* .navBar {
         display: none;
     } */
@@ -879,6 +916,7 @@ align-items: center;
         display: block;
         background: transparent;
         border: none;
+        cursor: pointer;
     }
     .closeMenu img {
         height: 100%;
@@ -927,6 +965,26 @@ align-items: center;
     .rightSide img:nth-child(2) {
         padding: 1vh;
     }
+    .profile-icon {
+        display: none;
+    }
+}
+.cv-close {
+    position: absolute;
+    bottom: 20px;
+    right: 25px;
+    background: none;
+    border: none;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    padding: 7px;
+    background-color: #ffffff12;
+    backdrop-filter: blur(7px);
+    border-radius: 5px;
+}
+.cv-close img {
+    width: 100%;    
 }
 @media only screen and (min-width: 500px) and (max-width: 900px) and (orientation: landscape){
     .navBar {
@@ -961,6 +1019,12 @@ align-items: center;
     }
     .coverBtn {
         top: 0;
+        display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    }
+    .coverBtn button {
+        width: 100%;
     }
     .bottomNavBar {
         /* height: 4em; */
@@ -1069,6 +1133,10 @@ align-items: center;
     }
     .coverBtn button {
         width: max-content;
+        padding: 0.6vh;
+    }
+    .coverBtn button span {
+        display: none;
     }
     .profileName {
         font-size: 4vh;
