--- a/src/App.css
+++ b/src/App.css
@@ -1021,18 +1021,19 @@ align-items: center;
     }
     .coverBtn {
         top: 0;
-        display: flex;
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     }
     .coverBtn button {
         width: 100%;
+        height: 25px;
     }
     .bottomNavBar {
         /* height: 4em; */
     }
 }
-@media only screen and (min-width: 901px) and (max-width: 1366px) and (orientation: landscape){
+@media only screen and (min-width: 901px) and (max-width: 1368px) and (orientation: landscape){
     .profileInfo {
         left: -5vh;
     }
@@ -1049,62 +1050,25 @@ align-items: center;
         width: 35vw;
         margin-right: 0;
     }
+    .coverBtn {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: center;
+    }
+    .coverBtn button {
+        padding: 0.8vh;
+    margin: 20px 0;
+    }
     
 }
 @media only screen and (min-width: 1919px) and (min-height: 950px) and (orientation: landscape){
-    .profileImg {
-        /* align-items: center;
-        background-color: #fff;
-        border-radius: 50%;
-        display: flex;
-        height: 275px;
-        justify-content: center; */
-        /* left: 63px; */
-        /* position: relative; */
-        /* top: -123px; */
-        /* width: 275px; */
-    }
-    .searchBar {
-        /* font-size: 20px; */
-    }
     .profileName {
-        /* font-size: 55px; */
         line-height: 1.4em;
     }
     .profileSubText {
         color: #65676b;
-        /* font-size: 20px; */
     }
-    .coverBtn button {
-        /* font-size: 20px; */
-    }
-    .bottomLists {
-        /* font-size: 25px; */
-    }
-    .infoDiv h3 {
-        /* font-size: 28px; */
-    }
-    /* .introduction span {
-        font-size: 24px;
-    } */
-    /* .workMainDiv .socialDiv .textDiv span:nth-child(2) {
-        font-size: 20px;
-    }
-    .textDiv span:nth-child(3) {
-        font-size: 18px;
-    }
-    .form label {
-        font-size: 20px;
-    }
-    .form input {
-        font-size: 22px;
-    }
-    #contact .introText h2 {
-        font-size: 8em;
-    }
-    #contact .bottomTxt span:nth-child(2) {
-        font-size: 20px;
-    } */
 }
 @media only screen and (min-width: 651px) and (max-width: 1024px)  and (min-height: 1000px) and (orientation: portrait){
     .search-container{
@@ -1136,6 +1100,7 @@ align-items: center;
     .coverBtn button {
         width: max-content;
         padding: 0.6vh;
+        height: 60px;
     }
     .coverBtn button span {
         display: none;
@@ -1172,6 +1137,9 @@ align-items: center;
         display: none;
     }
     #project .infoDiv {
+        display: none;
+    }
+    .bottomNavBar.onTop .profile-icon {
         display: none;
     }
 }
