--- a/src/App.css
+++ b/src/App.css
@@ -132,8 +132,8 @@ user-select: none;
     background-image: linear-gradient(180deg, #80808078 0%, #00000045 18%, #fff, #fff);
 }
 .coverImg {
-    height: 57vh;
-    width: 75%;
+    height: 65vh;
+    width: 85%;
     display: flex;
     justify-content: center;
     border-radius: 0px 0px 10px 10px;
@@ -193,21 +193,25 @@ user-select: none;
     right: 10vh;
     display: flex;
     align-items: center;
+    flex-direction: column;
     position: relative;
-    top: -3vh;
+    justify-content: center;
 }
 .coverBtn button {
     font-size: 2.8vh;
     border: none;
-    padding: 1.7vh;
+    padding: 1vh;
     border-radius: 0.5vh;
     background-color: #e4e6eb;
     cursor: pointer;
-    height: 45px;
-    display: flex;
+    height: 4rem;
     align-items: center;
     color: #0866ff;
-    margin: 0 5px;
+    margin: 10px 0px;
+    width: 100%;
+    direction: f;
+    display: flex;
+    justify-content: center;
 }
 .coverBtn button img {
     height: 100%;
@@ -216,7 +220,7 @@ user-select: none;
 .homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv, .workMainDiv {
     height: 100vh;
     text-align: center;
-    width: 70%;
+    width: 85%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -238,7 +242,7 @@ user-select: none;
 .bottomNavList {
     display: flex;
     list-style-type: none;
-    width: 75%;
+    width: 85%;
     border-top: 1px solid #00000042;
     position: absolute;
 }
@@ -286,7 +290,7 @@ user-select: none;
 }
 .socialDiv {
     height: 100%;
-    width: 32vw;
+    width: 37vw;
     box-shadow: 0px 0px 5px 0px #808080a1;
     border-radius: 10px;
     background-color: #fff;
@@ -765,6 +769,23 @@ align-items: center;
 .bottomNavBar.onTop .profile-icon {
     opacity: 1;
 }
+.cv-close {
+    position: absolute;
+    bottom: 20px;
+    right: 25px;
+    background: none;
+    border: none;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    padding: 7px;
+    background-color: #ffffff12;
+    backdrop-filter: blur(7px);
+    border-radius: 5px;
+}
+.cv-close img {
+    width: 100%;    
+}
 @media only screen and (max-width: 650px) and (max-height: 950px) and (orientation: portrait){
     /* .navBar {
         display: none;
@@ -971,23 +992,6 @@ align-items: center;
         display: none;
     }
 }
-.cv-close {
-    position: absolute;
-    bottom: 20px;
-    right: 25px;
-    background: none;
-    border: none;
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    padding: 7px;
-    background-color: #ffffff12;
-    backdrop-filter: blur(7px);
-    border-radius: 5px;
-}
-.cv-close img {
-    width: 100%;    
-}
 @media only screen and (min-width: 500px) and (max-width: 900px) and (orientation: landscape){
     .navBar {
         display: none;
@@ -1021,23 +1025,28 @@ align-items: center;
     }
     .coverBtn {
         top: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
     .coverBtn button {
         width: 100%;
-        height: 25px;
-    }
-    .bottomNavBar {
-        /* height: 4em; */
+        margin: 10px 0;
+        padding: 5px 10px;
+        height: 35px;
+        display: flex;
+        justify-content: space-evenly;
     }
 }
 @media only screen and (min-width: 901px) and (max-width: 1368px) and (orientation: landscape){
     .profileInfo {
         left: -5vh;
     }
-    .coverImg, .coverBottom {
+    .coverBottom {
+        width: 85%;
+    }
+    .coverImg {
+        height: 57vh;
         width: 85%;
     }
     .homeMainDiv, .projectsMainDiv, .aboutMainDiv, .contactMainDiv, .workMainDiv {
@@ -1055,10 +1064,14 @@ align-items: center;
         flex-direction: column;
         align-items: stretch;
         justify-content: center;
+    
     }
     .coverBtn button {
-        padding: 0.8vh;
-    margin: 20px 0;
+        margin: 5px 0;
+        height: 2.4rem;
+        /* padding: 6px 10px; */
+        display: flex;
+        justify-content: space-evenly;
     }
     
 }
@@ -1068,6 +1081,9 @@ align-items: center;
     }
     .profileSubText {
         color: #65676b;
+    }
+    .coverImg {
+        height: 65vh !important;
     }
 }
 @media only screen and (min-width: 651px) and (max-width: 1024px)  and (min-height: 1000px) and (orientation: portrait){
